more style fixes: smaller height when only one notification or none, better emptycontent style, size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,16 +11,22 @@
     right: 50px;
     top: 45px;
     width: 400px;
-    height: 260px;
+    min-height: 100px;
+    max-height: 260px;
     border-radius: 3px;
     border: 1px solid rgb(238, 238, 238);;
+}
+
+.notification-container .emptycontent h2 {
+    font-weight: 300;
+    font-size: 16px;
 }
 
 /* Fill width on mobile */
 @media (max-width: 500px) {
     .notification-container {
-        right: 0;
-        width: 100%;
+        right: 5%;
+        width: 90%;
     }
 }
 
